--- a/tic-tac-finger/package.json
+++ b/tic-tac-finger/package.json
@@ -22,5 +22,10 @@
     "tailwindcss": "^3.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Alan47-crypto/BlaqRoc/tree/main/tic-tac-finger"
+  },
+  "author": "Alan"
 }
